// Copyright 2024 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


enum OsconfigBetaGuestPolicyPackagesDesiredStateEnum {
  OsconfigBetaGuestPolicyPackagesDesiredStateEnumNO_VALUE_DO_NOT_USE = 0;
  OsconfigBetaGuestPolicyPackagesDesiredStateEnumDESIRED_STATE_UNSPECIFIED = 1;
  OsconfigBetaGuestPolicyPackagesDesiredStateEnumINSTALLED = 2;
  OsconfigBetaGuestPolicyPackagesDesiredStateEnumREMOVED = 3;
}

enum OsconfigBetaGuestPolicyPackagesManagerEnum {
  OsconfigBetaGuestPolicyPackagesManagerEnumNO_VALUE_DO_NOT_USE = 0;
  OsconfigBetaGuestPolicyPackagesManagerEnumMANAGER_UNSPECIFIED = 1;
  OsconfigBetaGuestPolicyPackagesManagerEnumANY = 2;
  OsconfigBetaGuestPolicyPackagesManagerEnumAPT = 3;
  OsconfigBetaGuestPolicyPackagesManagerEnumYUM = 4;
  OsconfigBetaGuestPolicyPackagesManagerEnumZYPPER = 5;
  OsconfigBetaGuestPolicyPackagesManagerEnumGOO = 6;
}

enum OsconfigBetaGuestPolicyPackageRepositoriesAptArchiveTypeEnum {
  OsconfigBetaGuestPolicyPackageRepositoriesAptArchiveTypeEnumNO_VALUE_DO_NOT_USE = 0;
  OsconfigBetaGuestPolicyPackageRepositoriesAptArchiveTypeEnumARCHIVE_TYPE_UNSPECIFIED = 1;
  OsconfigBetaGuestPolicyPackageRepositoriesAptArchiveTypeEnumDEB = 2;
  OsconfigBetaGuestPolicyPackageRepositoriesAptArchiveTypeEnumDEB_SRC = 3;
}

enum OsconfigBetaGuestPolicyRecipesInstallStepsArchiveExtractionTypeEnum {
  OsconfigBetaGuestPolicyRecipesInstallStepsArchiveExtractionTypeEnumNO_VALUE_DO_NOT_USE = 0;
  OsconfigBetaGuestPolicyRecipesInstallStepsArchiveExtractionTypeEnumTYPE_UNSPECIFIED = 1;
  OsconfigBetaGuestPolicyRecipesInstallStepsArchiveExtractionTypeEnumVALIDATION = 2;
  OsconfigBetaGuestPolicyRecipesInstallStepsArchiveExtractionTypeEnumDESIRED_STATE_CHECK = 3;
  OsconfigBetaGuestPolicyRecipesInstallStepsArchiveExtractionTypeEnumDESIRED_STATE_ENFORCEMENT = 4;
  OsconfigBetaGuestPolicyRecipesInstallStepsArchiveExtractionTypeEnumDESIRED_STATE_CHECK_POST_ENFORCEMENT = 5;
}

enum OsconfigBetaGuestPolicyRecipesInstallStepsScriptRunInterpreterEnum {
  OsconfigBetaGuestPolicyRecipesInstallStepsScriptRunInterpreterEnumNO_VALUE_DO_NOT_USE = 0;
  OsconfigBetaGuestPolicyRecipesInstallStepsScriptRunInterpreterEnumINTERPRETER_UNSPECIFIED = 1;
  OsconfigBetaGuestPolicyRecipesInstallStepsScriptRunInterpreterEnumNONE = 2;
  OsconfigBetaGuestPolicyRecipesInstallStepsScriptRunInterpreterEnumSHELL = 3;
  OsconfigBetaGuestPolicyRecipesInstallStepsScriptRunInterpreterEnumPOWERSHELL = 4;
}

enum OsconfigBetaGuestPolicyRecipesUpdateStepsArchiveExtractionTypeEnum {
  OsconfigBetaGuestPolicyRecipesUpdateStepsArchiveExtractionTypeEnumNO_VALUE_DO_NOT_USE = 0;
  OsconfigBetaGuestPolicyRecipesUpdateStepsArchiveExtractionTypeEnumTYPE_UNSPECIFIED = 1;
  OsconfigBetaGuestPolicyRecipesUpdateStepsArchiveExtractionTypeEnumVALIDATION = 2;
  OsconfigBetaGuestPolicyRecipesUpdateStepsArchiveExtractionTypeEnumDESIRED_STATE_CHECK = 3;
  OsconfigBetaGuestPolicyRecipesUpdateStepsArchiveExtractionTypeEnumDESIRED_STATE_ENFORCEMENT = 4;
  OsconfigBetaGuestPolicyRecipesUpdateStepsArchiveExtractionTypeEnumDESIRED_STATE_CHECK_POST_ENFORCEMENT = 5;
}

enum OsconfigBetaGuestPolicyRecipesUpdateStepsScriptRunInterpreterEnum {
  OsconfigBetaGuestPolicyRecipesUpdateStepsScriptRunInterpreterEnumNO_VALUE_DO_NOT_USE = 0;
  OsconfigBetaGuestPolicyRecipesUpdateStepsScriptRunInterpreterEnumINTERPRETER_UNSPECIFIED = 1;
  OsconfigBetaGuestPolicyRecipesUpdateStepsScriptRunInterpreterEnumNONE = 2;
  OsconfigBetaGuestPolicyRecipesUpdateStepsScriptRunInterpreterEnumSHELL = 3;
  OsconfigBetaGuestPolicyRecipesUpdateStepsScriptRunInterpreterEnumPOWERSHELL = 4;
}

enum OsconfigBetaGuestPolicyRecipesDesiredStateEnum {
  OsconfigBetaGuestPolicyRecipesDesiredStateEnumNO_VALUE_DO_NOT_USE = 0;
  OsconfigBetaGuestPolicyRecipesDesiredStateEnumDESIRED_STATE_UNSPECIFIED = 1;
  OsconfigBetaGuestPolicyRecipesDesiredStateEnumINSTALLED = 2;
  OsconfigBetaGuestPolicyRecipesDesiredStateEnumREMOVED = 3;
}

message OsconfigBetaGuestPolicy {
  string name = 1;
  string description = 2;
  string create_time = 3;
  string update_time = 4;
  OsconfigBetaGuestPolicyAssignment assignment = 5;
  repeated OsconfigBetaGuestPolicyPackages packages = 6;
  repeated OsconfigBetaGuestPolicyPackageRepositories package_repositories = 7;
  repeated OsconfigBetaGuestPolicyRecipes recipes = 8;
  string etag = 9;
  string project = 10;
}

message OsconfigBetaGuestPolicyAssignment {
  repeated OsconfigBetaGuestPolicyAssignmentGroupLabels group_labels = 1;
  repeated string zones = 2;
  repeated string instances = 3;
  repeated string instance_name_prefixes = 4;
  repeated OsconfigBetaGuestPolicyAssignmentOSTypes os_types = 5;
}

message OsconfigBetaGuestPolicyAssignmentGroupLabels {
  map<string, string> labels = 1;
}

message OsconfigBetaGuestPolicyAssignmentOSTypes {
  string os_short_name = 1;
  string os_version = 2;
  string os_architecture = 3;
}

message OsconfigBetaGuestPolicyPackages {
  string name = 1;
  OsconfigBetaGuestPolicyPackagesDesiredStateEnum desired_state = 2;
  OsconfigBetaGuestPolicyPackagesManagerEnum manager = 3;
}

message OsconfigBetaGuestPolicyPackageRepositories {
  OsconfigBetaGuestPolicyPackageRepositoriesApt apt = 1;
  OsconfigBetaGuestPolicyPackageRepositoriesYum yum = 2;
  OsconfigBetaGuestPolicyPackageRepositoriesZypper zypper = 3;
  OsconfigBetaGuestPolicyPackageRepositoriesGoo goo = 4;
}

message OsconfigBetaGuestPolicyPackageRepositoriesApt {
  OsconfigBetaGuestPolicyPackageRepositoriesAptArchiveTypeEnum archive_type = 1;
  string uri = 2;
  string distribution = 3;
  repeated string components = 4;
  string gpg_key = 5;
}

message OsconfigBetaGuestPolicyPackageRepositoriesYum {
  string id = 1;
  string display_name = 2;
  string base_url = 3;
  repeated string gpg_keys = 4;
}

message OsconfigBetaGuestPolicyPackageRepositoriesZypper {
  string id = 1;
  string display_name = 2;
  string base_url = 3;
  repeated string gpg_keys = 4;
}

message OsconfigBetaGuestPolicyPackageRepositoriesGoo {
  string name = 1;
  string url = 2;
}

message OsconfigBetaGuestPolicyRecipes {
  string name = 1;
  string version = 2;
  repeated OsconfigBetaGuestPolicyRecipesArtifacts artifacts = 3;
  repeated OsconfigBetaGuestPolicyRecipesInstallSteps install_steps = 4;
  repeated OsconfigBetaGuestPolicyRecipesUpdateSteps update_steps = 5;
  OsconfigBetaGuestPolicyRecipesDesiredStateEnum desired_state = 6;
}

message OsconfigBetaGuestPolicyRecipesArtifacts {
  string id = 1;
  OsconfigBetaGuestPolicyRecipesArtifactsRemote remote = 2;
  OsconfigBetaGuestPolicyRecipesArtifactsGcs gcs = 3;
  bool allow_insecure = 4;
}

message OsconfigBetaGuestPolicyRecipesArtifactsRemote {
  string uri = 1;
  string checksum = 2;
}

message OsconfigBetaGuestPolicyRecipesArtifactsGcs {
  string bucket = 1;
  string object = 2;
  int64 generation = 3;
}

message OsconfigBetaGuestPolicyRecipesInstallSteps {
  OsconfigBetaGuestPolicyRecipesInstallStepsFileCopy file_copy = 1;
  OsconfigBetaGuestPolicyRecipesInstallStepsArchiveExtraction archive_extraction = 2;
  OsconfigBetaGuestPolicyRecipesInstallStepsMsiInstallation msi_installation = 3;
  OsconfigBetaGuestPolicyRecipesInstallStepsDpkgInstallation dpkg_installation = 4;
  OsconfigBetaGuestPolicyRecipesInstallStepsRpmInstallation rpm_installation = 5;
  OsconfigBetaGuestPolicyRecipesInstallStepsFileExec file_exec = 6;
  OsconfigBetaGuestPolicyRecipesInstallStepsScriptRun script_run = 7;
}

message OsconfigBetaGuestPolicyRecipesInstallStepsFileCopy {
  string artifact_id = 1;
  string destination = 2;
  bool overwrite = 3;
  string permissions = 4;
}

message OsconfigBetaGuestPolicyRecipesInstallStepsArchiveExtraction {
  string artifact_id = 1;
  string destination = 2;
  OsconfigBetaGuestPolicyRecipesInstallStepsArchiveExtractionTypeEnum type = 3;
}

message OsconfigBetaGuestPolicyRecipesInstallStepsMsiInstallation {
  string artifact_id = 1;
  repeated string flags = 2;
  repeated int64 allowed_exit_codes = 3;
}

message OsconfigBetaGuestPolicyRecipesInstallStepsDpkgInstallation {
  string artifact_id = 1;
}

message OsconfigBetaGuestPolicyRecipesInstallStepsRpmInstallation {
  string artifact_id = 1;
}

message OsconfigBetaGuestPolicyRecipesInstallStepsFileExec {
  string artifact_id = 1;
  string local_path = 2;
  repeated string args = 3;
  repeated int64 allowed_exit_codes = 4;
}

message OsconfigBetaGuestPolicyRecipesInstallStepsScriptRun {
  string script = 1;
  repeated int64 allowed_exit_codes = 2;
  OsconfigBetaGuestPolicyRecipesInstallStepsScriptRunInterpreterEnum interpreter = 3;
}

message OsconfigBetaGuestPolicyRecipesUpdateSteps {
  OsconfigBetaGuestPolicyRecipesUpdateStepsFileCopy file_copy = 1;
  OsconfigBetaGuestPolicyRecipesUpdateStepsArchiveExtraction archive_extraction = 2;
  OsconfigBetaGuestPolicyRecipesUpdateStepsMsiInstallation msi_installation = 3;
  OsconfigBetaGuestPolicyRecipesUpdateStepsDpkgInstallation dpkg_installation = 4;
  OsconfigBetaGuestPolicyRecipesUpdateStepsRpmInstallation rpm_installation = 5;
  OsconfigBetaGuestPolicyRecipesUpdateStepsFileExec file_exec = 6;
  OsconfigBetaGuestPolicyRecipesUpdateStepsScriptRun script_run = 7;
}

message OsconfigBetaGuestPolicyRecipesUpdateStepsFileCopy {
  string artifact_id = 1;
  string destination = 2;
  bool overwrite = 3;
  string permissions = 4;
}

message OsconfigBetaGuestPolicyRecipesUpdateStepsArchiveExtraction {
  string artifact_id = 1;
  string destination = 2;
  OsconfigBetaGuestPolicyRecipesUpdateStepsArchiveExtractionTypeEnum type = 3;
}

message OsconfigBetaGuestPolicyRecipesUpdateStepsMsiInstallation {
  string artifact_id = 1;
  repeated string flags = 2;
  repeated int64 allowed_exit_codes = 3;
}

message OsconfigBetaGuestPolicyRecipesUpdateStepsDpkgInstallation {
  string artifact_id = 1;
}

message OsconfigBetaGuestPolicyRecipesUpdateStepsRpmInstallation {
  string artifact_id = 1;
}

message OsconfigBetaGuestPolicyRecipesUpdateStepsFileExec {
  string artifact_id = 1;
  string local_path = 2;
  repeated string args = 3;
  repeated int64 allowed_exit_codes = 4;
}

message OsconfigBetaGuestPolicyRecipesUpdateStepsScriptRun {
  string script = 1;
  repeated int64 allowed_exit_codes = 2;
  OsconfigBetaGuestPolicyRecipesUpdateStepsScriptRunInterpreterEnum interpreter = 3;
}

message ApplyOsconfigBetaGuestPolicyRequest {
  OsconfigBetaGuestPolicy resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteOsconfigBetaGuestPolicyRequest {
  string service_account_file = 1;
  OsconfigBetaGuestPolicy resource = 2;
}

message ListOsconfigBetaGuestPolicyRequest {
  string service_account_file = 1;
  string Project = 2;
}

message ListOsconfigBetaGuestPolicyResponse {
  repeated OsconfigBetaGuestPolicy items = 1;
}

service OsconfigBetaGuestPolicyService {
  rpc ApplyOsconfigBetaGuestPolicy(ApplyOsconfigBetaGuestPolicyRequest) returns (OsconfigBetaGuestPolicy);
  rpc DeleteOsconfigBetaGuestPolicy(DeleteOsconfigBetaGuestPolicyRequest) returns (google.protobuf.Empty);
  rpc ListOsconfigBetaGuestPolicy(ListOsconfigBetaGuestPolicyRequest) returns (ListOsconfigBetaGuestPolicyResponse);
}
